# Space-Rangers-Part-3

./: README.md
Space-Rangers-Qt/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  t_common_defines.cpp  t_common_defines.h  t_common_entities.cpp  t_common_entities.h  t_common_systems.cpp  t_common_systems.h  t_game_components.cpp  t_game_components.h  t_game_loop.cpp  t_game_loop.h  t_game_render_system.cpp  t_game_render_system.h  t_game_systems.cpp  t_game_systems.h  t_minimap_component.cpp  t_minimap_component.h  t_render_system.cpp  t_render_system.h  t_scene_components.cpp  t_scene_components.h  t_scene_systems.cpp  t_scene_systems.h  t_sprite_render_system.cpp  t_sprite_render_system.h  t_stepper.cpp  t_stepper.h  t_value_stepper.cpp
Space-Rangers-Qt/extra/: t_value_stepper.h
Space-Rangers-Qt/interfaces/: i_game_system.cpp  i_game_system.h  i_system.cpp  i_system.h
Space-Rangers-Qt/linear_algebra/: CMakeLists.txt  linear_algebra_global.h  main.cpp  run_test_store_exception.h  t_2d_common.cpp  t_2d_common.h  t_2d_common_entities.cpp  t_2d_common_entities.h  t_2d_common_utilities.cpp  t_2d_common_utilities.h  t_2d_container_entity.cpp  t_2d_container_entity.h  t_2d_linear_algebra_entities.cpp  t_2d_linear_algebra_entities.h  t_2d_linear_algebra_systems.cpp  t_2d_linear_algebra_systems.h  t_2d_position_entity.cpp  t_2d_position_entity.h  t_2d_position_systems.cpp  t_2d_position_systems.h  t_2d_vector_entity.cpp  t_2d_vector_entity.h  t_2d_vector_systems.cpp  t_2d_vector_systems.h  t_linear_algebra.cpp  t_linear_algebra.h  t_run_test_store_exception.h
Space-Rangers-Qt/planets/: t_component_planet.cpp  t_component_planet.h  t_planet_circle_moving_system.cpp  t_planet_circle_moving_system.h  t_planet_component.cpp  t_planet_component.h  t_planet_game_component.cpp  t_planet_game_component.h  t_planet_id_generator.cpp  t_planet_id_generator.h  t_planet_moving_system.h  t_planet_system_circle_moving.cpp  t_planet_system_circle_moving.h  t_planet_system_make_planets.cpp  t_planet_system_make_planets.h  t_system_make_planets.cpp  t_system_make_planets.h  t_system_planet_circle_moving.cpp  t_system_planet_circle_moving.h
Space-Rangers-Qt/planetsystems/: t_component_planetsystem.cpp  t_component_planetsystem.h  t_planetsystem_component.cpp  t_planetsystem_component.h
Space-Rangers-Qt/spacecenters/: t_spacecenter_component.cpp  t_spacecenter_component.h
Space-Rangers-Qt/spaceships/: t_component_spaceship.cpp  t_component_spaceship.h  t_spaceship_component.cpp  t_spaceship_component.h  t_spaceship_defence_system.cpp  t_spaceship_defence_system.h  t_spaceship_following_another_system.cpp  t_spaceship_following_another_system.h  t_spaceship_get_withing_range.cpp  t_spaceship_get_withing_range.h  t_spaceship_get_withing_range_system.cpp  t_spaceship_get_withing_range_system.h  t_spaceship_landing_planet_system.cpp  t_spaceship_landing_planet_system.h  t_spaceship_moving_by_trajectory_system.cpp  t_spaceship_moving_by_trajectory_system.h  t_spaceship_system_following_another.cpp  t_spaceship_system_following_another.h  t_spaceship_system_get_within_range.cpp  t_spaceship_system_get_within_range.h  t_spaceship_system_landing_planet.cpp  t_spaceship_system_landing_planet.h  t_spaceship_system_locking_aim.cpp  t_spaceship_system_locking_aim.h  t_spaceship_system_trajectory_moving.cpp  t_spaceship_system_trajectory_moving.h  t_spaceship_systems.cpp  t_spaceship_systems.h  t_spaceship_trajectory_moving_system.cpp  t_spaceship_trajectory_moving_system.h  t_system_spaceship_locking_on_aim.cpp  t_system_spaceship_locking_on_aim.h
Space-Rangers-Qt/spaceships/equipments/: t_component_rocket.cpp  t_component_rocket.h  t_rocket_moving_system.cpp  t_rocket_moving_system.h
Space-Rangers-Qt/spaceships/equipments/weapons/: t_component_rocket.cpp  t_component_rocket.h  t_component_rocket_weapon.cpp  t_component_rocket_weapon.h  t_rocket_moving_system.cpp  t_rocket_moving_system.h  t_rocket_weapon_component.cpp  t_rocket_weapon_component.h  t_spaceship_rocket_weapon_launcher_system.cpp  t_spaceship_rocket_weapon_launcher_system.h  t_spaceship_rocket_weapon_launching_system.cpp  t_spaceship_rocket_weapon_launching_system.h  t_system_rocket_launcher.cpp  t_system_rocket_launcher.h  t_weapon_set_aim_id_system.cpp  t_weapon_set_aim_id_system.h
